<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LineBall</string>
    <string name="menu_play">Play</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="text_about">This game is the final project of ITMO University Android Development course.</string>
    <string name="text_developers">Developers</string>
    <string name="author1">maximelkin</string>
    <string name="author2">KiriosK</string>
    <string name="author3">glebvr</string>
    <string name="help01">Game for two players.</string>
    <string name="help02">Each player has a ball.</string>
    <string name="help03">Players can draw walls of their color on the gameboard.</string>
    <string name="help04">The ball moves slower if it hits the wall of the same color.</string>
    <string name="help05">The ball moves faster if it hits the wall of the opponent\'s color.</string>
    <string name="help06">The wall breaks after one hit of the same color ball or two hits of the opponent\'s ball.</string>
    <string name="player_search">Looking for players…</string>
    <string name="this_user_win">You win! :)</string>
    <string name="this_user_loose">You loose :(</string>
    <string name="input_your_nick">Nick</string>
    <string name="register">Register</string>
    <string name="connection_error">Connection error</string>
    <string name="ball_color">Ball color</string>
    <string name="ball_blue">Blue</string>
    <string name="ball_red">Red</string>
    <string name="clear_nick">Clear saved nick</string>
</resources>
