<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="6"
        tools:context="ru.ifmo.droid2016.lineball.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_header"
        android:layout_weight="4"
        android:layout_margin="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="4"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_play"
            android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_menu_play"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_help"
            android:textSize="24sp"
            android:id="@+id/btn_menu_help"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_settings"
            android:textSize="24sp"
            android:id="@+id/btn_menu_settings"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_about"
            android:textSize="24sp"
            android:id="@+id/btn_menu_about"/>
    </LinearLayout>
</LinearLayout>
