<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="ru.ifmo.droid2016.lineball.AboutActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_header"
            android:layout_margin="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_about"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_developers"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >
                <ImageView
                    android:id="@+id/iv_av1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/author1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author1"
                    android:layout_below="@id/iv_av1"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >
                <ImageView
                    android:id="@+id/iv_av2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/author2" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author2"
                    android:layout_below="@id/iv_av2"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >
                <ImageView
                    android:id="@+id/iv_av3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/author3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author3"
                    android:layout_below="@id/iv_av3"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
